<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GhostTalk</string>
    <string name="start_tagline">Deine Stimme, unterstützt durch KI.</string>
    
    <!-- Shared Strings -->
    <string name="settings_title_global">App Einstellungen</string>
    <string name="settings_title_book">Buch Einstellungen</string>
    <string name="start_manage_content">Inhalte verwalten</string>
    <string name="page_list_title">Seiten verwalten</string>
    <string name="template_manage_title">Vorlagen verwalten</string>
    <string name="back_button_content_description">Zurück</string>
    <string name="page_import_success">Import erfolgreich!</string>
...
