...

    GhostTalkScaffold(
        title = stringResource(CoreR.string.app_name),
        actions = {
            IconButton(
                onClick = onNavigateToGlobalSettings,
                modifier = Modifier.testTag("book_list_settings_button")
            ) {
                Icon(
                    imageVector = Icons.Default.Settings,
                    contentDescription = stringResource(CoreR.string.settings_title_global)
                )
            }
...
